src/test/deca/codegen/valid/provided/entier1.deca
// Description:
//    tests d'expressions entieres
//
// Resultats:
//    1
//    2

{
   float i  = 5+7; 
   float j  = 7;
   i = 1;
   println(i);
   i = i + 1;
   println(i);
}

