src/test/deca/codegen/invalid/modint0.deca
// Description:
//    Division d'un int par 0 avec modulo.
//
// Resultats:
//    Erreur : Division par 0.
//

{
   int i = 5;
   i = i%0;
}

